@@ -266,7 +266,7 @@
 </tr>
 <tr class="row-even"><td><strong>HCN_volume_mixing_ratio_uncertainty_systematic</strong></td>
 <td>double</td>
-<td>{<em>time</em>, <em>vertical</em>, <em>vertical</em>}</td>
+<td>{<em>time</em>, <em>vertical</em>}</td>
 <td>[ppv]</td>
 <td>systematic standard deviation of the HCN volume mixing ratio</td>
 </tr>
