@@ -1,3 +1,5 @@
+* Update to GEOMS MWR product ingestion.
+
 1.7 2019-06-06
 ~~~~~~~~~~~~~~
 
